--- a/src/styles/components/content/video_lesson.scss
+++ b/src/styles/components/content/video_lesson.scss
@@ -95,51 +95,56 @@
 
   .right-side {
     margin-left: 32px;
-    max-height: 600px;
-    //overflow-y: scroll;
+    @media (width < 1700px) {
+      display: none;
+    }
 
-    .right-lessons {
-      min-width: 430px;
-      @media (width < 1700px) {
-        display: none;
-      }
+    .right-lessons-wrapper {
+      max-height: 600px;
+      overflow-y: scroll;
+      background: linear-gradient(180deg, rgba(8, 8, 8, 0) 0%, rgba(8, 8, 8, 0.83) 63.54%, #080808 100%);
+      margin-bottom: 48px;
 
-      .r-lessons-header {
-        background: rgba(255, 255, 255, 0.06);
-        border: 1px solid rgba(255, 255, 255, 0.04);
-        border-radius: 10px;
-        padding: 10px 0 10px 24px;
-        margin: 8px 0;
-      }
+      .right-lessons {
+        min-width: 430px;
 
-      .right-lesson-info {
-        cursor: pointer;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
-        padding: 20px 0 20px 24px;
-
-        .rli-wrapper {
-          display: flex;
-          justify-content: space-between;
-
-          .r-lessons-title {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 18px;
-            line-height: 22px;
-          }
-
-          .r-lessons-title-d {
-            font-style: normal;
-            font-weight: 600;
-            font-size: 15px;
-            line-height: 22px;
-            margin-right: 14px;
-          }
+        .r-lessons-header {
+          background: rgba(255, 255, 255, 0.06);
+          border: 1px solid rgba(255, 255, 255, 0.04);
+          border-radius: 10px;
+          padding: 10px 0 10px 24px;
+          margin: 8px 0;
         }
 
-        .r-lessons-desc {
-          margin-top: 16px;
-          width: 340px;
+        .right-lesson-info {
+          cursor: pointer;
+          border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+          padding: 20px 0 20px 24px;
+
+          .rli-wrapper {
+            display: flex;
+            justify-content: space-between;
+
+            .r-lessons-title {
+              font-style: normal;
+              font-weight: 500;
+              font-size: 18px;
+              line-height: 22px;
+            }
+
+            .r-lessons-title-d {
+              font-style: normal;
+              font-weight: 600;
+              font-size: 15px;
+              line-height: 22px;
+              margin-right: 14px;
+            }
+          }
+
+          .r-lessons-desc {
+            margin-top: 16px;
+            width: 340px;
+          }
         }
       }
     }
